// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetsDialog it should match no dataset snapshot 1`] = `
<transition-stub name="dialog-fade" project="[object Object]" currentuser="[object Object]" visible="true" ismanager="true" refreshdata="function () {}" style="z-index: 2003;">
  <div class="el-dialog__wrapper">
    <div role="dialog" aria-modal="true" aria-label="Add or remove datasets in this project" class="el-dialog project-datasets-dialog" style="margin-top: 15vh;">
      <div class="el-dialog__header"><span class="el-dialog__title">Add or remove datasets in this project</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
      <div class="el-dialog__body">
        <div class="mt-6">
          <div class="filter-box">
            <div class="el-select el-select--mini select-box-mini">
              <!---->
              <div class="el-input el-input--mini el-input--suffix">
                <!----><input type="text" readonly="readonly" autocomplete="off" placeholder="5%" class="el-input__inner">
                <!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-select__caret el-input__icon el-icon-arrow-up"></i><!----><!----><!----><!----><!----></span>
                <!----></span>
                <!---->
                <!---->
              </div>
              <transition-stub name="el-zoom-in-top">
                <div class="el-select-dropdown el-popper" style="display: none;">
                  <div class="el-scrollbar" style="">
                    <div class="el-select-dropdown__wrap el-scrollbar__wrap el-scrollbar__wrap--hidden-default">
                      <ul class="el-scrollbar__view el-select-dropdown__list">
                        <!---->
                        <li class="el-select-dropdown__item"><span>All datasets</span></li>
                        <li class="el-select-dropdown__item"><span>My datasets</span></li>
                        <li class="el-select-dropdown__item selected"><span>Project datasets</span></li>
                        <li class="el-select-dropdown__item"><span>group1</span></li>
                      </ul>
                    </div>
                    <div class="el-scrollbar__bar is-horizontal">
                      <div class="el-scrollbar__thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
                    </div>
                    <div class="el-scrollbar__bar is-vertical">
                      <div class="el-scrollbar__thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
                    </div>
                  </div>
                  <!---->
                </div>
              </transition-stub>
            </div>
            <div class="el-input el-input--mini query-filter">
              <!----><input type="text" autocomplete="off" placeholder="Enter dataset name" class="el-input__inner">
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
          <div class="table-box mt-2">
            <div class="el-table el-table--fit el-table--striped el-table--scrollable-x el-table--enable-row-hover el-table--mini" id="annot-table" current="true" elementloadingtext="Loading results …" tabindex="1">
              <div class="hidden-columns">
                <div></div>
                <div></div>
                <div></div>
                <div></div>
              </div>
              <div class="el-table__header-wrapper">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 308px;">
                  <colgroup>
                    <col name="el-table_2_column_5" width="48">
                    <col name="el-table_2_column_6" width="100">
                    <col name="el-table_2_column_7" width="80">
                    <col name="el-table_2_column_8" width="80">
                  </colgroup>
                  <thead class="">
                    <tr class="">
                      <th colspan="1" rowspan="1" class="el-table_2_column_5   el-table-column--selection  is-leaf">
                        <div class="cell"><label class="el-checkbox is-disabled"><span class="el-checkbox__input is-disabled"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" disabled="disabled" class="el-checkbox__original" value=""></span>
                            <!----></label></div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_2_column_6     is-leaf">
                        <div class="cell">Dataset</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_2_column_7     is-leaf">
                        <div class="cell">Submitter</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_2_column_8     is-leaf">
                        <div class="cell">Upload date</div>
                      </th>
                    </tr>
                  </thead>
                </table>
              </div>
              <div class="el-table__body-wrapper is-scrolling-left">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 308px;">
                  <colgroup>
                    <col name="el-table_2_column_5" width="48">
                    <col name="el-table_2_column_6" width="100">
                    <col name="el-table_2_column_7" width="80">
                    <col name="el-table_2_column_8" width="80">
                  </colgroup>
                  <tbody>
                    <!---->
                  </tbody>
                </table>
                <div class="el-table__empty-block" style="height: 100%; width: 308px;"><span class="el-table__empty-text">暂无数据</span></div>
                <!---->
              </div>
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="el-table__column-resize-proxy" style="display: none;"></div>
            </div>
          </div>
          <mock-el-pagination pagesize="5" pagesizes="5,15,20,25,30" currentpage="1" layout="prev,pager,next,sizes" class="mt-2" total="55"></mock-el-pagination>
          <div class="button-bar"><button type="button" class="el-button el-button--default">
              <!---->
              <!----><span>Cancel</span></button><button disabled="disabled" type="button" class="el-button el-button--primary is-disabled w-32">
              <!---->
              <!----><span>Update</span></button></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</transition-stub>
`;

exports[`DatasetsDialog it should match snapshot 1`] = `
<transition-stub name="dialog-fade" project="[object Object]" currentuser="[object Object]" visible="true" ismanager="true" refreshdata="function () {}" style="z-index: 2001;">
  <div class="el-dialog__wrapper">
    <div role="dialog" aria-modal="true" aria-label="Add or remove datasets in this project" class="el-dialog project-datasets-dialog" style="margin-top: 15vh;">
      <div class="el-dialog__header"><span class="el-dialog__title">Add or remove datasets in this project</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
      <div class="el-dialog__body">
        <div class="mt-6">
          <div class="filter-box">
            <div class="el-select el-select--mini select-box-mini">
              <!---->
              <div class="el-input el-input--mini el-input--suffix">
                <!----><input type="text" readonly="readonly" autocomplete="off" placeholder="5%" class="el-input__inner">
                <!----><span class="el-input__suffix"><span class="el-input__suffix-inner"><i class="el-select__caret el-input__icon el-icon-arrow-up"></i><!----><!----><!----><!----><!----></span>
                <!----></span>
                <!---->
                <!---->
              </div>
              <transition-stub name="el-zoom-in-top">
                <div class="el-select-dropdown el-popper" style="display: none;">
                  <div class="el-scrollbar" style="">
                    <div class="el-select-dropdown__wrap el-scrollbar__wrap el-scrollbar__wrap--hidden-default">
                      <ul class="el-scrollbar__view el-select-dropdown__list">
                        <!---->
                        <li class="el-select-dropdown__item"><span>All datasets</span></li>
                        <li class="el-select-dropdown__item"><span>My datasets</span></li>
                        <li class="el-select-dropdown__item selected"><span>Project datasets</span></li>
                        <li class="el-select-dropdown__item"><span>group1</span></li>
                      </ul>
                    </div>
                    <div class="el-scrollbar__bar is-horizontal">
                      <div class="el-scrollbar__thumb" style="transform: translateX(0%); webkit-transform: translateX(0%);"></div>
                    </div>
                    <div class="el-scrollbar__bar is-vertical">
                      <div class="el-scrollbar__thumb" style="transform: translateY(0%); webkit-transform: translateY(0%);"></div>
                    </div>
                  </div>
                  <!---->
                </div>
              </transition-stub>
            </div>
            <div class="el-input el-input--mini query-filter">
              <!----><input type="text" autocomplete="off" placeholder="Enter dataset name" class="el-input__inner">
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
          <div class="table-box mt-2">
            <div class="el-table el-table--fit el-table--striped el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition el-table--mini" id="annot-table" current="true" elementloadingtext="Loading results …" tabindex="1">
              <div class="hidden-columns">
                <div></div>
                <div></div>
                <div></div>
                <div></div>
              </div>
              <div class="el-table__header-wrapper">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 308px;">
                  <colgroup>
                    <col name="el-table_1_column_1" width="48">
                    <col name="el-table_1_column_2" width="100">
                    <col name="el-table_1_column_3" width="80">
                    <col name="el-table_1_column_4" width="80">
                  </colgroup>
                  <thead class="">
                    <tr class="">
                      <th colspan="1" rowspan="1" class="el-table_1_column_1   el-table-column--selection  is-leaf">
                        <div class="cell"><label class="el-checkbox"><span class="el-checkbox__input"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span>
                            <!----></label></div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_2     is-leaf">
                        <div class="cell">Dataset</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_3     is-leaf">
                        <div class="cell">Submitter</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_4     is-leaf">
                        <div class="cell">Upload date</div>
                      </th>
                    </tr>
                  </thead>
                </table>
              </div>
              <div class="el-table__body-wrapper is-scrolling-left">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 308px;">
                  <colgroup>
                    <col name="el-table_1_column_1" width="48">
                    <col name="el-table_1_column_2" width="100">
                    <col name="el-table_1_column_3" width="80">
                    <col name="el-table_1_column_4" width="80">
                  </colgroup>
                  <tbody>
                    <tr class="el-table__row">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  el-table-column--selection">
                        <div class="cell"><label class="el-checkbox"><span class="el-checkbox__input"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span>
                            <!----></label></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">New 3 (1)</div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell">allDatasets.0.submitter.name</div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4  ">
                        <div class="cell">31 March, 2021</div>
                      </td>
                    </tr>
                    <tr class="el-table__row el-table__row--striped">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  el-table-column--selection">
                        <div class="cell"><label class="el-checkbox"><span class="el-checkbox__input"><span class="el-checkbox__inner"></span><input type="checkbox" aria-hidden="false" class="el-checkbox__original" value=""></span>
                            <!----></label></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">Untreated_3_434_super_lite_19_31 (1)</div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell">allDatasets.1.submitter.name</div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4  ">
                        <div class="cell">30 March, 2021</div>
                      </td>
                    </tr>
                    <!---->
                  </tbody>
                </table>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="el-table__column-resize-proxy" style="display: none;"></div>
            </div>
          </div>
          <mock-el-pagination pagesize="5" pagesizes="5,15,20,25,30" currentpage="1" layout="prev,pager,next,sizes" class="mt-2" total="55"></mock-el-pagination>
          <div class="button-bar"><button type="button" class="el-button el-button--default">
              <!---->
              <!----><span>Cancel</span></button><button disabled="disabled" type="button" class="el-button el-button--primary is-disabled w-32">
              <!---->
              <!----><span>Update</span></button></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</transition-stub>
`;
